--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
